--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 # unneeded directories
 heterohot
 
-# slickedit project files
-*.vpj
-*.vpw
-*.vpwhist
-*.vtg
-
 # webstorm project files
 .idea
 
@@ -18,3 +12,5 @@ heterohot
 
 *.o
 a.out
+
+*.xlsx
